[package]
name = "radicle-keystore"
description = "Abstraction over storage of cryptographic keys within the Radicle stack"
version = "0.2.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[features]
ssh-agent = ["lnk-thrussh-agent", "lnk-thrussh-encoding"]

[dependencies]
async-trait = "0.1"
byteorder = "1.4"
futures = "0.3"
generic-array = { version = "0.14", features = ["serde"] }
lazy_static = "1"
lnk-cryptovec = "0.6.0"
lnk-thrussh-agent = { version = "0.1.0", optional = true, default-features = false }
lnk-thrussh-encoding = { version = "0.1.0", optional = true }
rand = "0.8.4"
rpassword = "4.0"
secstr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
thiserror = "1.0"

# CRYPTO
#
# The binary consumer dictates these versions via .lock
# The .lock is used to screen the crypto dependency minor/patch bumps
#
[dependencies.chacha20poly1305]
version = "^0.10.1"
default-features = false
features = ["alloc"]

[dependencies.ed25519-zebra]
version = "^3.0.0"

[dependencies.scrypt]
version = "^0.10.0"
default-features = false

[dev-dependencies]
tokio = { version = ">= 1.8.4", features = ["macros", "rt"] }
ed25519-dalek = "=1.0.1"
lnk-thrussh-agent = { version = "0.1.0", features = [ "smol-agent" ], default-features = false }
rand = { version = "0.8.4", default-features = false }
smol = { version = "1.2" }
sodiumoxide = "0.2"
tempfile = "3"

